add symbol for org notes

--- a/config.org
+++ b/config.org
@@ -327,6 +327,7 @@ But we can add them:
                             ("boxright" "$\\boxright$" nil "" "" "" "□→")
                             ("models" "$\\models$" nil "" "" "" "⊨")
                             ("vdash" "$\\vdash$" nil "" "" "" "⊢")
+                            ("leadsto" "$\leadsto$" nil "" "" "" "↝")
                             ("llb" "$\\llbracket$" nil "" "" "" "⟦")
                             ("rrb" "$\\rrbracket$" nil "" "" "" "⟧")
                            )   
