improve capture templates

--- a/config.org
+++ b/config.org
@@ -726,27 +726,38 @@ SCHEDULED: <%%(diary-last-day-of-month date)>
 #+begin_src emacs-lisp :tangle yes
 (after! org-capture
   (setq org-capture-templates '(
-          ("t" "single task (todo.org)" entry (file+headline "todo.org" "Single Tasks")
-           "\n* TODO %?")
+          ;; ("t" "single task (todo.org)" entry (file+headline "todo.org" "Single Tasks")
+          ;;  "\n* TODO %?")
+          ("t" "TODO (single task)")
+          ("tt" "General (todo.org)" entry (file+headline "todo.org" "Single Tasks")
+                           "\n* TODO %?" :empty-lines 1)
+          ("tr" "Research (research.org)" entry (file+headline "research.org" "Single Tasks")
+                           "\n* TODO [#B] %?" :empty-lines 1)
+          ("ta" "Uni Admin(admin.org)" entry (file+headline "admin.org" "Single Tasks")
+                           "\n* TODO [#B] %?" :empty-lines 1)
+          ("to" "Philosophical Progress (opp.org)" entry (file+headline "opp.org" "Tasks")
+                           "\n* TODO [#B] %?  %(org-set-tags \"prog\")" :empty-lines 1)
+          ("ti" "Investing (investing.org)" entry (file+headline "investing.org" "App Tasks")
+                           "\n* TODO [#B] %?  %(org-set-tags \"prog\")" :empty-lines 1)
+          ("tp" "Tree Proof Generator (trees-todo.org)" entry (file+headline "tpg.org" "Tasks")
+                           "\n* TODO [#B] %?  %(org-set-tags \"prog\")" :empty-lines 1)
           ("s" "scheduled task (schedule.org)" entry (file+headline "schedule.org" "Tickler")
-           "\n* TODO %?\nSCHEDULED: %^t\n")
+                           "\n* TODO %?\nSCHEDULED: %^t\n" :empty-lines 1)
           ("b" "buy (add to shopping list in todo.org)" entry (file+headline "todo.org" "Shopping list")
-           "\n* TODO buy %?")
+                           "\n* TODO buy %?" :empty-lines 1)
           ("a" "appointment (schedule.org)" entry (file+headline "schedule.org" "Calendar")
-           "\n* %?\n%^t")
+                           "\n* %?\n%^t" :empty-lines 1)
           ("i" "inbox entry" entry (file "inbox.org")
-           "\n* %?\n")
+                           "\n\n* %?" :empty-lines 1)
           ("j" "journal/logbook entry (logbook.org)" entry (file+datetree "logbook.org")
-            "* %<%H:%M>\n%?\n" :tree-type week)
-          ;; '("j" "Journal entry" entry (function org-journal-find-location)
-          ;;   "* %(format-time-string org-journal-time-format)%\n%i%?")
+                           "* %<%H:%M>\n%?\n" :tree-type week)
           ; from browser:
           ("l" "link (from browser)" entry (file "inbox.org")
-           ;; "* %a\n %?\n %i" :immediate-finish t))
-           "\n* %a\n %?\n %i\n")
+           ;; "* %a\n %?\n %i" :immediate-finish txx
+                           "\n* %a\n %?\n %i\n")
           )
-  )
-  (setq org-protocol-default-template-key "l")
+    )
+    (setq org-protocol-default-template-key "l")
   )
 #+end_src
 
